--- a/servicios.html
+++ b/servicios.html
@@ -20,7 +20,7 @@
     <div class="container logo-nav"><!--  logo de la pagina -->
         
         <a href="index.html" class="logo">Tz</a>
-        <span class="logo-icon">menu </span>
+        <span class="menu-icon">menu </span>
           
 
     <!-- Navigation Bar -->
