--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/index2.css">
+    
+    <link rel="stylesheet" href="css/index2.css">
+
     <link rel="stylesheet" href="[FontAwesome]/css/all.css">
   
 </head>
@@ -118,6 +120,14 @@
         <h2>teczervice@gmail.com</h2>
     </div>
 </footer>
+<script 
+ src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">
+</script>
+
+<script
+src="js/p1.js">
+
+</script> 
 </body>
 
 </html>
