cambios en el header del formulario

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <aside class="asid">
   <div class="row">      
     <div class="aside">
-            <h2>QUIENES SOMOS </h2>
+            <h1>TECZERVICE</h1>
             <p>Somos una empresa familiar dedicada a la reparación<br> 
                 mantenimiento y venta de electrodomésticos.<br>
                 aires acondicionados, heladeras y lavarropas<br>
